# cpp_starter

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
tests/: CMakeLists.txt
